- Option to have a warning when the building you've selected to build would replace another already built in the city
  - Off by default, controlled by config option warn_when_chosen_building_would_replace_another
- Stop barbarian spawns from bankrupting the barbarian player (matters only if barbs are allowed to capture cities)
- Option stopping pollution of impassable tiles also covers volcanic eruptions
- Make barbarians defend cities they've captured as if they were camps
- Fix describe_states_of_units_on_menu setting being ignored
- Touch up action descriptions for auto precision striking and fortified exhausted units

* RELEASE 19
- Option to stop pollution from appearing on impassable tiles
- Rework UnitRCMIcons.pcx so busy & combat units can be given special icons
- Fix bombers not doing stack bombard and not showing as attack-capable on right-click menu
- Fix crash when opening right-click menu with fleeing automated workers
- Fix lethal ZoC setting allowing coastal fortresses to knock the last hit point off passing units
- Fix dont_escort_unflagged_units option interfering with group movement of units
- Put right-click menu sword icon on non-empty armies
- Describe the action of passenger units as "Transported" instead of "Fortified"
- Describe the action of units waiting to fortify as "Fortified" instead of leaving it unreplaced

* RELEASE 18B
- Fix Wake/Activate replacement not working on Steam version

* RELEASE 18
- Unit limits
- Expand AI two-city start to any number of cities
  - Config option has been renamed to ai_multi_city_start
- AI's starter cities in multi-city start can begin with improvements, inc. "extra palaces" which respawn like the real palace
- Right-click menu enhancements
  - Place icons next to units showing movement and combat status
  - Replace Wake/Activate with descriptions of what the units are doing
  - Gray out units if they have no remaining moves
  - Stop grouping automated and non-automated workers