@@ -526,3 +526,6 @@ do_not_generate_volcanos = false
 
 ; Stops the game from placing pollution on impassable tiles
 do_not_pollute_impassable_tiles = false
+
+; Includes the hitpoints of each possible target on the stealth attack selection popup. This makes it easier to pick out weakened units.
+show_hp_of_stealth_attack_options = false
